<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.smartreader.app.ui.main.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home"
        xmlns:tools="http://schemas.android.com/tools" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.smartreader.app.ui.main.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings"
        xmlns:tools="http://schemas.android.com/tools" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.smartreader.app.ui.main.AboutFragment"
        android:label="@string/nav_about"
        tools:layout="@layout/fragment_about"
        xmlns:tools="http://schemas.android.com/tools" />

</navigation>
